k8s/gloo_overlay/patch.8-default-gateways.yaml
---
# Source: gloo-ee/charts/gloo/templates/8-default-gateways.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy
  namespace: gloo-system
  labels:
    app: gloo
spec:
  bindAddress: "::"
  bindPort: 8080
  httpGateway:
    options:
      httpConnectionManagerSettings:
        useRemoteAddress: true
  ssl: false
  proxyNames:
  - gateway-proxy
  options:
    accessLoggingService:
      accessLog:
      - fileSink:
          path: /dev/stdout
          stringFormat: ""
---
# Source: gloo-ee/charts/gloo/templates/8-default-gateways.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy-ssl
  namespace: gloo-system
  labels:
    app: gloo
spec:
  bindAddress: "::"
  bindPort: 8443
  httpGateway:
    options:
      httpConnectionManagerSettings:
        useRemoteAddress: true
  ssl: true
  proxyNames:
  - gateway-proxy
  options:
    accessLoggingService:
      accessLog:
      - fileSink:
          path: /dev/stdout
          stringFormat: ""
