k8s/gloo_overlay/vs-selfservice.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: kratos-selfservice
  namespace: gloo-system
spec:
  displayName: kratos-selfservice
  virtualHost:
    domains:
      - sso.localhost
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: sso-selfservice-clusterip-4455
              namespace: gloo-system
    options:
      cors:
        allowOrigin: ['*']
        allowMethods: [GET, PUT, DELETE, POST, OPTIONS]
        allowHeaders:
          [
            keep-alive,
            user-agent,
            cache-control,
            content-type,
            content-transfer-encoding,
            custom-header-1,
            x-accept-content-transfer-encoding,
            x-accept-response-streaming,
            x-user-agent,
            x-grpc-web,
            grpc-timeout,
          ]
        maxAge: '1728000'
